feat: save settings + log file in the user/home directory